--- a/app/static/assets/api_page.css
+++ b/app/static/assets/api_page.css
@@ -72,6 +72,12 @@ body, html {
     vertical-align: middle;
 }
 
+#searchResponseBlock {
+    height: 600px;
+    overflow-y: scroll;
+    overflow-x:hidden;
+}
+
 /* 
 .selectionQuery {
     font-weight: bold
