--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -178,39 +178,39 @@
                         </div>
                     </div>          
                     <h3>Response</h3>
-                    <div>
-                            <pre class="text-success prettyprint lang=js" id="searchResponseBlock">
-                                    {
-                                        &quot;status_code&quot;: 200,
-                                        &quot;data&quot;: [
-                                            {
-                                                &quot;approval&quot;: &quot;&quot;,
-                                                &quot;bulletin_flags&quot;: &quot;CEFKGRUXI&quot;,
-                                                &quot;call_number&quot;: 11307,
-                                                &quot;campus_code&quot;: &quot;MORN&quot;,
-                                                &quot;campus_name&quot;: &quot;MORNINGSIDE&quot;,
-                                                &quot;class_notes&quot;: &quot;&quot;,
-                                                &quot;course_id&quot;: &quot;COMS3134S001&quot;,
-                                                &quot;course_name&quot;: &quot;DATA STRUCTURES IN JAVA&quot;,
-                                                &quot;division_code&quot;: &quot;SS&quot;,
-                                                &quot;instructor_name&quot;: &quot;BLAER, PAUL S&quot;,
-                                                &quot;max_size&quot;: 999,
-                                                &quot;meeting_times&quot;: &quot;MW     05:30P-08:40PBTBA            RTBA&quot;,
-                                                &quot;min_units&quot;: 000,
-                                                &quot;num_enrolled&quot;: ,
-                                                &quot;num_fixed_units&quot;: 030,
-                                                &quot;prefix_long_name&quot;: &quot;COMPUTER SCIENCE&quot;,
-                                                &quot;prefix_name&quot;: &quot;COMPUT SCI&quot;,
-                                                &quot;school_code&quot;: &quot;SPEC&quot;,
-                                                &quot;school_name&quot;: &quot;SCHOOL OF PROFESSIONAL STUDIES&quot;,
-                                                &quot;term&quot;: &quot;20182&quot;,
-                                                &quot;type_code&quot;: &quot;LC&quot;,
-                                                &quot;type_name&quot;: &quot;LECTURE&quot;
-                                            }
-                                        ],
-                                        &quot;status_txt&quot;: &quot;OK&quot;
-                                    }
-                                </pre>
+                    <div id="searchResponseBlock">
+                        <pre class="text-success prettyprint lang=js">
+                                {
+                                    &quot;status_code&quot;: 200,
+                                    &quot;data&quot;: [
+                                        {
+                                            &quot;approval&quot;: &quot;&quot;,
+                                            &quot;bulletin_flags&quot;: &quot;CEFKGRUXI&quot;,
+                                            &quot;call_number&quot;: 11307,
+                                            &quot;campus_code&quot;: &quot;MORN&quot;,
+                                            &quot;campus_name&quot;: &quot;MORNINGSIDE&quot;,
+                                            &quot;class_notes&quot;: &quot;&quot;,
+                                            &quot;course_id&quot;: &quot;COMS3134S001&quot;,
+                                            &quot;course_name&quot;: &quot;DATA STRUCTURES IN JAVA&quot;,
+                                            &quot;division_code&quot;: &quot;SS&quot;,
+                                            &quot;instructor_name&quot;: &quot;BLAER, PAUL S&quot;,
+                                            &quot;max_size&quot;: 999,
+                                            &quot;meeting_times&quot;: &quot;MW     05:30P-08:40PBTBA            RTBA&quot;,
+                                            &quot;min_units&quot;: 000,
+                                            &quot;num_enrolled&quot;: ,
+                                            &quot;num_fixed_units&quot;: 030,
+                                            &quot;prefix_long_name&quot;: &quot;COMPUTER SCIENCE&quot;,
+                                            &quot;prefix_name&quot;: &quot;COMPUT SCI&quot;,
+                                            &quot;school_code&quot;: &quot;SPEC&quot;,
+                                            &quot;school_name&quot;: &quot;SCHOOL OF PROFESSIONAL STUDIES&quot;,
+                                            &quot;term&quot;: &quot;20182&quot;,
+                                            &quot;type_code&quot;: &quot;LC&quot;,
+                                            &quot;type_name&quot;: &quot;LECTURE&quot;
+                                        }
+                                    ],
+                                    &quot;status_txt&quot;: &quot;OK&quot;
+                                }
+                            </pre>
                     </div>
                 </div>   
             </div>
@@ -300,16 +300,32 @@
             function queryFunction(endpoint) {
                 var req = endpoint + "Request";
                 var resp = endpoint + "ResponseBlock";
-                var count = 1
+                var count = 1;
                 var apiCall = new XMLHttpRequest();
                 apiCall.onreadystatechange = function() {
                     document.getElementById(req).innerHTML = apiRequest;
                     if (apiCall.readyState == XMLHttpRequest.DONE && this.status == 200) {
-                        var obj = JSON.parse(apiCall.responseText)
-                        var data = obj.data
-                        var temp_text = "<pre class='text-success' prettyprint lang=js>\n\
+                        var obj = JSON.parse(apiCall.responseText);
+                        console.log(obj)
+
+                        // if we have endpoint = select, the data is returned as a dict
+                        // if we have endpoint = search, the data is returned as array of dicts
+                        // to uniformize the data, I am putting both cases in an array of dicts
+                        totalData =[]
+                        if (endpoint == "select"){
+                            totalData[0]=obj.data
+                        }
+                        if (endpoint == "search"){
+                            totalData=obj.data
+                        }
+                        console.log(totalData)
+
+                        var result = ""
+                        for (i=0; i<totalData.length;i++){
+                            data = totalData[i]
+                            var temp_text = "<pre class='text-success' prettyprint lang=js>\n\
                                 {\n\
-                                    &quot;status_code&quot;: " + obj.status + ",\n\
+                                    &quot;status_code&quot;: 200,\n\
                                     &quot;data&quot;: [\n\
                                         { \n\
                                             &quot;approval&quot;: &quot;" +data.approval+ "&quot;,\n\
@@ -339,7 +355,9 @@
                                     &quot;status_txt&quot;: &quot;OK&quot;\n\
                                 }\n\
                             </pre>"
-                        document.getElementById(resp).innerHTML = temp_text;
+                            result+=temp_text
+                        }
+                        document.getElementById(resp).innerHTML = result;
                         document.getElementById(resp).style.color = "green";
                     } else {
                         var responseObj = JSON.parse(this.response);
@@ -378,4 +396,3 @@
      <link rel="stylesheet"
           href="{{url_for('static', filename='assets/api_page.css')}}">
      {% endblock %}
-     
