added scrollability, JSON formatting for large data sets and small data set

--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -14,6 +14,7 @@
             </div>
             <div>
                 <input class="btn" name="submit" type="submit" value='Search' />
+                <!-- <button type="button" class="btn" onclick="queryFunction('select')">GET</button> -->
             </div>
         </form>
         {% if results != [] %}
