Fixed large empty response block in "search" that occurs when key is unverified

--- a/app/static/assets/api_page.css
+++ b/app/static/assets/api_page.css
@@ -73,7 +73,11 @@ body, html {
     vertical-align: middle;
 }
 
-#searchResponseBlock {
+.nopadding{
+    height: 100%;
+}
+
+.searchResponseBlock {
     height: 600px;
     overflow-y: scroll;
     overflow-x:hidden;
