committing changes to residences

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav"> 
                     <li><a href="{{ url_for('main.courses') }}">Courses</a></li>
                     <li><a href="{{ url_for('main.student') }}">Students</a></li>
-                    <li><a href="{{ url_for('main.housing')}}">Housing</a></li>
+                    <li><a href="{{ url_for('main.residences')}}">Residences</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_authenticated %}
