--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -64,7 +64,7 @@
                            </div>
                        </div>
                        <div class="form-group">
-                           <label class="col-sm-2 control-label">Course_id:</label>
+                           <label class="col-sm-2 control-label">Course_ID:</label>
                            <div class="col-sm-10">
                                <input class="form-control" id="inputCourseID" type="text" value="COMS3134S001">
                            </div>
