Residences functional, select/search/query parameters working

--- a/app/templates/main/residences.html
+++ b/app/templates/main/residences.html
@@ -171,6 +171,7 @@
                            <div class="col-sm-10">
                                <button type="button" class="btn" onclick="queryFunction('search')">GET</button>
                                <button type="button" class="btn" onclick="addField()">ADD FIELD</button>
+                               &nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox"><small>Expand</small>
                            </div>
                        </div>
                    </div>         
