--- a/app/static/assets/base.css
+++ b/app/static/assets/base.css
@@ -4,6 +4,15 @@
   border-width:0;
 }
 
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(banner.jpg);
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
 .navbar-nav>li>a, .navbar-nav>a {
   color: #ffffff;
 }
