residences check box working, residences is fully functional

--- a/app/templates/main/courses.html
+++ b/app/templates/main/courses.html
@@ -20,6 +20,9 @@
        {% if current_user.is_authenticated %}
             {% if results != [] %}
             <table class="table-striped table-bordered center-block" padding width="90%">
+                <td >Name</td>
+                <td >Course ID</td>
+                <td >Term</td>
                 {% for item in results %}
                     <tr width="100%">
                         <td >
